# mkvdump

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build-cross.py  build.rs  ebml_matroska.xml
.github/: codecov.yml
.github/workflows/: cross.yml  docker.yml  release.yml  rust.yml  test.yml
examples/: simple.rs  webmdump.rs
inputs/: encrypted.hdr  incomplete.hdr  two_inits_segment_unknown_size.webm
macros/: Cargo.toml
mkvdump/: Cargo.toml
mkvdump/src/: main.rs
mkvdump/tests/inputs/: dateutc.mkv
mkvdump/tests/snapshots/: insta__parse_header_encrypted.snap  insta__test2.snap
mkvparser/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  build.rs  ebml.xml  ebml_matroska.xml
mkvparser/src/: ebml.rs  elements.rs  lib.rs  tree.rs
parser/: Cargo.toml
parser/examples/: webmdump.rs
parser/src/: buffer_reader.rs  callback.rs  ebml.rs  element.rs  element_metadata.rs  id.rs  integer.rs  lib.rs  parser.rs  parser_utils.rs  reader.rs  seek_reader.rs  status.rs  string.rs  varint.rs  webm_document.rs
src/: ancestory.rs  buffer_reader.rs  dom_types.rs  ebml.rs  element.rs  element_metadata.rs  element_parser.rs  elements.rs  enumerations.rs  error.rs  id.rs  lib.rs  main.rs  parser.rs  reader.rs  status.rs  tree.rs
src/snapshots/: mkvdump__tests__init_after_cluster_unknown_size.snap  mkvdump__tests__parse_file_with_dateutc.snap  mkvdump__tests__parse_header_encrypted.snap  mkvdump__tests__parse_incomplete_file_should_not_panic.snap  mkvdump__tests__test1.snap  mkvdump__tests__test2.snap  mkvdump__tests__test3.snap  mkvdump__tests__test4.snap  mkvdump__tests__test5.snap  mkvdump__tests__test6.snap  mkvdump__tests__test8.snap  mkvdump__tests__two_inits_segment_unknown_size.snap  webmdump__tests__parse_file_with_dateutc.snap  webmdump__tests__parse_header_encrypted.snap  webmdump__tests__parse_incomplete_file_should_not_panic.snap
tests/: cli.rs  insta.rs  invalid.rs  position.rs  smallbuffer.rs
tests/inputs/: incomplete.hdr  init_after_cluster_unknown_size.webm  invalid.txt
tests/inputs/matroska-test-suite/: README.md
tests/snapshots/: insta__parse_incomplete_file_should_not_hang.snap  insta__parse_incomplete_file_should_not_panic.snap  insta__test1.snap  insta__test4.snap  insta__test7.snap
website/: .gitignore  index.css  index.html  index.js  package-lock.json  package.json  tailwind.config.js  webpack.config.js  worker.js
website/wasm/: Cargo.toml
website/wasm/src/: lib.rs
website/wasm/tests/: web.rs
