[package]
name = "mkvdump"
version = "0.4.4"
authors = ["Carlos Bentzen <cadubentzen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MKV and WebM parser CLI tool"
repository = "https://github.com/cadubentzen/mkvdump"
keywords = ["mkv", "matroska", "webm", "cli", "ebml"]
categories = ["command-line-utilities", "multimedia", "parser-implementations"]
exclude = ["inputs/*", "tests/snapshots/*", ".github/*"]

[workspace]
members = ["website/wasm"]

[dependencies]
nom = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde_with = "3"
thiserror = "1"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
convert_case = "0.6"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1.18.1", features = ["yaml"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
