[package]
name = "mkvdump"
version = "0.5.0"
authors = ["Carlos Bentzen <cadubentzen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MKV and WebM parser CLI tool"
repository = "https://github.com/cadubentzen/mkvdump"
keywords = ["mkv", "matroska", "webm", "cli", "ebml"]
categories = ["command-line-utilities", "multimedia", "parser-implementations"]
exclude = ["tests/*", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mkvparser = { path = "mkvparser", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1.18.1", features = ["yaml"] }

[workspace]
members = ["mkvparser"]
