[package]
name = "mkvparser"
version = "0.0.1"
authors = ["Carlos Bentzen <cadubentzen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MKV and WebM parser"
repository = "https://github.com/cadubentzen/mkvdump"
keywords = ["mkv", "matroska", "webm", "ebml"]
categories = ["multimedia", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde_with = "3"
thiserror = "1"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
convert_case = "0.6"

[dev-dependencies]
serde_yaml = "0.9"
