[package]
name = "webm-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
enum-primitive-derive = "0.2"
num-traits = "0.2"
# macros = { path = "../macros"}
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
clap = { version = "3", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
