[package]
name = "mkvdump-wasm"
version = "0.1.0"
authors = ["Carlos Bentzen <cadubentzen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
mkvdump = { path = "../.." }
wasm-bindgen = "0.2"
serde = "1"
serde-wasm-bindgen = "0.5"
web-sys = { version = "0.3", features = ["console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
